# hdar-canonical

./: .gitignore  LICENSE  README.md  ROADMAP.md  TASK_LEDGER.md  demo_e2e.py  hdar_portable.py  pyproject.toml  requirements.txt  verifier.js
archived_evidence/: README.md
archived_evidence/chatgpt/: verifier_output.json
archived_evidence/codespace/: verifier_on_codespace.json  verifier_output.json
archived_evidence/e2b/: verifier_output.json
audio_recordings/: audio_index.json  dynamic_superimposed_recordings.webm  recording_1.webm  recording_10.webm  recording_11.webm  recording_12.webm  recording_13.webm  recording_14.webm  recording_15.webm  recording_16.webm  recording_2.webm  recording_3.webm  recording_4.webm  recording_5.webm  recording_6.webm  recording_7.webm  recording_8.webm  recording_9.webm  superimposed_recordings.webm
disassembled_ide/: LICENSE.txt  ThirdPartyNotices.txt  disassembly_manifest.json  package.json  product.json
docs/: app.js  index.html  style.css
fixtures/: input_records.jsonl  worker.py
hyperflow/: next.md  runlog.md  session_state.json
legacy/: README.md
src/: disassemble_ide.js  extract_audio.js  ghost_vault.js  god_mode_daemon.js  hdar.py  hdar_cli.py  hdar_hardened.py  hdar_secure_enclave.py  hdar_smt.py  lazy_agent_runner.py  mix_audios.js  mix_audios_dynamic.js  seal_on_host_a.py  seal_on_host_b.py  self_healing.js  verifier.py
tests/: test_capsule_integrity.py  test_crypto.py  test_lazy_agent_backends.py  test_lineage.py  test_new_etl.py  test_pipeline.py  test_smt.py  test_verifier.py
(+87 files in other folders)
