[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdar-canonical"
version = "1.0.0"
description = "Verifiable state continuity and provenance infrastructure for autonomous AI agents"
readme = "README.md"
authors = [{ name = "HDAR Continuity Infrastructure", email = "info@hdar.dev" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "cryptography>=44.0.1"
]

[project.urls]
Homepage = "https://overandor.github.io/hdar-canonical/"
Repository = "https://github.com/overandor/hdar-canonical"

[project.scripts]
hdar = "hdar_cli:main"

